src/user/nav/nav.less
@import "../../constant";

@nav_background: #080808;

nav {
  background-color: @nav_background;
  color: @light_green;
  padding: 0.75em 0;
  font-family: @creepster;

  .content {
    > div {
      display: inline-block;
      vertical-align: middle;
    }
  }

  .state-title {
    text-align: center;
    transform: scale(1, 1.2);

    span {
      font-size: 1.75em;
      line-height: 1em;
    }
  }

  a {
    color: @light_green;
    text-decoration: none;

    &:hover {
      color: @neon_green;
    }
  }

  .nbsp, .lsaquo, .icon { display: inline-block; vertical-align: middle; }

  .nbsp, .lsaquo { margin: 0 -0.125em; padding-bottom: 0.25em; font-size: 1.75em; line-height: 0.75em; font-family: monospace; }
  .icon { width: 1.75em; height: 1.75em; }

  .hide-menu {
    position: fixed; top: 0; right: 0; bottom: 0; left: 0;
    z-index: 50;
  }

  @menu_border: 1px solid @dark_green;
  .menu {
    position: absolute;
    right: 0; top: 2.375em;
    font-family: monospace;
    z-index: 100;
    padding-bottom: 0.25em;

    a {
      display: block;
      padding: 0.25em 1em 0.5em;
      border: @menu_border;
      border-bottom: 0;
      line-height: 1.5em;
      background: @nav_background;

      &:last-child {
        border-bottom: @menu_border;
      }
    }
  }
}

